--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <script src="https://www.paypal.com/sdk/js?client-id=AQrvbsQb7RKtIze4roYAB0AVS2NVNC4DZTEq1CO87BvEKwrKKOw7aWMuqXs-8QGaB9fSFmgz46gnREw3&currency=USD"></script> -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_0jJLEALMJ3N3zMDznwbBY");
+   })();
+</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173935612-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
