--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,21 +2,19 @@
 <html lang="en">
   <head>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
     <script type="text/javascript">
        (function(){
           emailjs.init("user_0jJLEALMJ3N3zMDznwbBY");
        })();
-    </script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173935612-1"></script>
+    </script> -->
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173935612-1"></script> -->
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-173935612-1');
 </script>
-
     <meta charset="utf-8" />
     <link rel="icon" href="./Tennis-Ball-Download-Free-PNG.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -40,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tennis Camp | Prospect Park</title>
+    <title>Totally Tennis | Tennis For Kids</title>
   </head>
   
   <body>
