--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,13 +2,7 @@
 <html lang="en">
   <head>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
-    <script type="text/javascript">
-       (function(){
-          emailjs.init("user_0jJLEALMJ3N3zMDznwbBY");
-       })();
-    </script> -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173935612-1"></script> -->
+   
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -21,7 +15,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Summer Tennis Camp"
+      content="Tennis"
     />
     <link rel="apple-touch-icon" href="./Tennis-Ball-Download-Free-PNG.png" />
     <!--
